--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "blobity": "^0.2.3",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
